# cookiecutter-ansible-role

./: .gitignore  .talismanrc  .travis.yml  Gemfile  Makefile  README.md  cookiecutter.json  devbox.json  pyproject.toml  requirements.txt  setup.cfg  test.py  travis.py
.github/workflows/: main.yml  molecule.yml
hooks/: post_gen_project.py
test/: test_molecule.py
{{cookiecutter.project_name}}/: .gitignore  .travis.yml  Makefile  README.md  devbox.json  molecule.yml  playbook.yml  pyproject.toml  requirements.txt
{{cookiecutter.project_name}}/.github/workflows/: keepalive.yml  lint.yml  main.yml  molecule.yml  release.yml
{{cookiecutter.project_name}}/defaults/: main.yml
{{cookiecutter.project_name}}/docker/: arch.dockerfile
{{cookiecutter.project_name}}/handlers/: main.yml
{{cookiecutter.project_name}}/meta/: main.yml
{{cookiecutter.project_name}}/molecule/default/: Dockerfile.j2  converge.yml  destroy.yml  molecule.yml
{{cookiecutter.project_name}}/molecule/default/tests/: test_default.py
{{cookiecutter.project_name}}/spec/centos/: package_spec.rb
{{cookiecutter.project_name}}/spec/debian/: package_spec.rb
{{cookiecutter.project_name}}/spec/specs/: package_spec.rb
{{cookiecutter.project_name}}/spec/ubuntu/: package_spec.rb
{{cookiecutter.project_name}}/tasks/: main.yml
{{cookiecutter.project_name}}/tests/: test_command.py  test_packages.py
{{cookiecutter.project_name}}/vars/: RedHat.yml  archlinux.yml
{{cookiecutter.role_name}}/: README.md
