[tool.poetry]
name = "nephelaiio.cookiecutter-ansible-role"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
yamllint = "^1.27.1"
ansible = "^6.1.0"
MarkupSafe = "2.0.1"
pytest = "^7.1.2"
cookiecutter = "^2.1.1"
molecule-docker = "^2.0.0"
molecule = "^4.0.1"
ansible-lint = { version = "*", markers = "platform_system != 'Windows'" }
netaddr = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
