[tool.poetry]
name = "nephelaiio.cookiecutter-ansible-role"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
yamllint = "^1.32.0"
ansible = "^6.7.0"
MarkupSafe = "2.0.1"
pytest = "^7.4.2"
cookiecutter = "^2.4.0"
molecule-docker = "^2.1.0"
molecule = "^4.0.4"
ansible-lint = { version = "*", markers = "platform_system != 'Windows'" }
netaddr = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
