[project]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "ansible-lint>=25.4.0",
  "ansible>=11.5.0",
  "molecule>=25.4.0",
  "cryptography==44.0.0",
  "molecule-plugins>=23.7.0",
  "yamllint>=1.37.1",
  "netaddr>=1.3.0",
  "docker>=7.1.0",
]
